# superserum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
plugins/deep-analysis/mcp/: __main__.py  pyproject.toml  server.py
plugins/ecosystem-builder/: README.md  pyproject.toml  run_tests.py
plugins/ecosystem-builder/.claude-plugin/: plugin.json
plugins/ecosystem-builder/lib/: __init__.py  agents.py  builder.py  logging.py  orchestrator.py  prompts.py  skill_generator.py  staging.py  state.py  task_adapter.py  validator.py
plugins/ecosystem-builder/scripts/: e2e-test.sh
plugins/ecosystem-builder/skills/ecosystem-builder/: SKILL.md
plugins/ecosystem-builder/tests/: __init__.py  test_agents.py  test_builder.py  test_cli.py  test_orchestrator.py  test_prompts.py  test_skill_generator.py  test_staging.py  test_state.py  test_task_adapter.py  test_validator.py
plugins/persistent-tasks/: .mcp.json  README.md  pyproject.toml
plugins/persistent-tasks/.claude-plugin/: plugin.json
plugins/persistent-tasks/skills/persistent-tasks/: SKILL.md
plugins/persistent-tasks/src/persistent_tasks/: __init__.py  server.py  storage.py
plugins/persistent-tasks/tests/: test_storage.py
plugins/session-log/: .gitignore  .mcp.json  __main__.py  pyproject.toml  session_server.py  tool_handlers.py
plugins/session-log/.claude-plugin/: plugin.json
plugins/session-log/commands/: list-sessions.md
plugins/session-log/hooks/: hooks.json
plugins/session-log/mcp/: __main__.py  pyproject.toml  security.py  server.py  session_server.py  tool_handlers.py
plugins/session-log/scripts/: run_tests.sh  session_end.py  session_start.py
plugins/session-log/session_log/: __init__.py  queries.py  search.py  storage.py
plugins/session-log/tests/: conftest.py  test_indexing.py  test_queries.py  test_search.py  test_server.py  test_session_end.py  test_session_end_integration.py  test_session_start.py  test_storage.py  test_summarizer.py  test_tool_handlers.py  test_transcript.py
(+179 files in other folders)
