[project]
name = "ecosystem-builder"
version = "0.1.0"
description = "Autonomous workflow for expanding the skill ecosystem"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
