[project]
name = "session-log-mcp"
version = "0.1.0"
description = "MCP server for session-log plugin"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["session_log"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
