[project]
name = "deep-analysis-mcp"
version = "0.1.0"
description = "MCP server for deep analysis semantic search and indexing"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "txtai>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
